<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="260dp"
        android:layout_height="260dp"
        android:src="@mipmap/tictaktoe"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/logo"
        >

    </ImageView>

    <TextView
        android:id="@+id/logo_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:text="@string/ticTacToeName"
        android:textAllCaps="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        >

    </TextView>

    <Button
        android:id="@+id/startGame"
        android:layout_width="260dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/teal_200"
        android:text="@string/startGame"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo_text"
        android:layout_marginTop="@dimen/startButtonMarginTop"
        >
    </Button>

    <Button
        android:id="@+id/lastResults"
        android:layout_width="260dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/teal_200"
        android:text="@string/lastGames"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/startGame"
        >
    </Button>

    <Button
        android:id="@+id/about_game"
        android:layout_width="260dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/teal_200"
        android:text="@string/aboutGame"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lastResults"
        >
    </Button>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:text="@string/copyright"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        >

    </TextView>

</androidx.constraintlayout.widget.ConstraintLayout>