<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SelectGame">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="260dp"
        android:layout_height="260dp"
        android:src="@mipmap/tictaktoe"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/logo"
        >

    </ImageView>

    <TextView
        android:id="@+id/logo_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:text="@string/ticTacToeName"
        android:textAllCaps="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        >

    </TextView>

    <TextView
        android:id="@+id/select_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:text="Выберите тип игры"
        app:layout_constraintTop_toBottomOf="@id/logo_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp"
        >

    </TextView>

    <Button
        android:id="@+id/with_friend"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/teal_200"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/select_text"
        android:text="@string/verseFriend"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:layout_marginTop="20dp"
        >

    </Button>

    <Button
        android:id="@+id/with_ii"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/teal_200"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/with_friend"
        android:text="@string/verseII"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textAllCaps="false"
        >

    </Button>

    <Button
        android:id="@+id/back_to_main"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/teal_200"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/with_ii"
        android:text="@string/back"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:layout_marginTop="30dp"
        >

    </Button>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:text="@string/copyright"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        >

    </TextView>

</androidx.constraintlayout.widget.ConstraintLayout>